AUTOMAKE_OPTIONS = subdir-objects
lib_LTLIBRARIES = \
    libmobajson.la

libmobajson_la_SOURCES = \
    jsonstreamreadersocket.cpp

otherincludedir = \
    $(includedir)/moba-json

otherinclude_HEADERS = \
    json.h \
    jsonstreamreadersocket.h

ACLOCAL_AMFLAGS = \
    -I m4

CLEANFILES = \
    *~

